# NCKU-PD1

./: BMI.c  CMakeLists.txt  CapitalizeEnglishName.c  CapitalizeEnglishNameCorrectOne.c  DD2.c  Dungeon.c  EAN.c  FoodStand.c  GPAcalculator.c  Grouping.c  LanguageModel.c  MathFanatic.c  README.md  RightTriangle.c  bonus.c  coffee.c  polynomial.c  pretest.c  sizeof.c  swap.c  triangle.c  turnip.c
